dataset/local/tf_lambda_xray_tracing/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enable-x-ray-tracing
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: enable-x-ray-tracing
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: enable-x-ray-tracing
    kind: Plan
    resources:
      - bad-plan
    result: fail
